--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.13.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vue-toast-notification": "^0.6.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
